kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arkade-api
  labels:
    app: arkade-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: arkade-api
